MIT-477: Fix sidebar alignment on full story.

--- a/components/columnArea/columnArea--fullStory.css
+++ b/components/columnArea/columnArea--fullStory.css
@@ -7,13 +7,13 @@
  * - 1-col offset
  * - 6-col main columnn with 20px padding right
  * - 2-col gap
- * - 3-col sidebar with 20px padding right
+ * - 3-col sidebar with 20px padding right, none left.
  *
  * At tablet:
  * - 1-col offset
  * - 6-col main columnn with 20px padding right
  * - 1-col gap
- * - 4-col sidebar with 20px padding left
+ * - 4-col sidebar with 20px padding left, none right.
  */
 
 .wrapper {
@@ -37,11 +37,13 @@
   @media ($mdMin) {
     display: block;
     padding-left: rem(20);
-    width: calc(tidy-span-full(4) - rem(20));
+    padding-right: 0;
+    tidy-span: 4;
   }
 
   @media ($lgMin) {
+    padding-left: 0;
     padding-right: rem(20);
-    width: calc(tidy-span-full(3) - rem(20));
+    tidy-span: 3;
   }
 }
